alignment corrected

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -9,7 +9,6 @@
   border: 1px solid black;
   border-radius: 10px;
   /* margin-left: 35%; */
-  
 }
 
 ul{
@@ -29,6 +28,8 @@ ul{
   box-shadow: 3px 2px 17px -2px rgba(87,87,87,1);
 }
 
+/*добавить классы лишкам*/
+
 li{
   /* margin: 2px; */
   display: flex;
@@ -47,4 +48,15 @@ li{
 
 li:hover{
   background-color: rgb(158, 255, 190);
+}
+
+.info{
+  display: block;
+  margin: 0 auto;
+  padding: 20px;
+  font-size: 20px;
+}
+
+.info-next{
+  margin-right: 50px;
 }
